// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector has to accept theming 1`] = `
<div
  class="sc-bdfBwQ gndRiw"
>
  Selector Label
</div>
`;

exports[`Selector has to be rendered 1`] = `
<div
  class="sc-bdfBwQ iRGlIU"
>
  Selector Label
</div>
`;
